<resources>
    <string name="app_name">Butterknife</string>

    <string name="title_q_1">Question 1</string>
    <string name="content_q_1">When Udacity has found?</string>
    <string name="option_q_1_1">June 2011</string>
    <string name="option_q_1_2">April 2000</string>
    <string name="option_q_1_3">Jan 1990</string>
    <string name="title_q_2">Question 2</string>
    <string name="content_q_2">Who is the CEO of Udacity? </string>
    <string name="option_q_2_1">Vishal Makhijani</string>
    <string name="option_q_2_2">Polo Alto</string>
    <string name="option_q_2_3">Hadi Hariri</string>
    <string name="title_q_3">Question 3</string>
    <string name="content_q_3">What is the language used by Android Studio?</string>
    <string name="option_q_3_1">.Net</string>
    <string name="option_q_3_2">Python</string>
    <string name="option_q_3_3">Kotlin</string>
    <string name="title_q_4">Question 4</string>
    <string name="content_q_4">Who is the founder of Udacity?</string>
    <string name="option_q_4_1">Sebastian Tharun</string>
    <string name="option_q_4_2">Vishal Makhijani</string>
    <string name="option_q_4_3">Hadi Hariri</string>
    <string name="title_q_5">Question 5</string>
    <string name="content_q_5">Which of the following are the headquarters of Udacity</string>
    <string name="option_q_5_1">India</string>
    <string name="option_q_5_2">Germany</string>
    <string name="option_q_5_3">United States</string>
    <string name="your_score_is">Your Score is</string>
    <string name="make_sure_answer_questions">Please make sure you answer all the questions</string>
    <string name="headline">UDACITY GOT TALENT</string>
    <string name="headline_one">Consistency is the way to success</string>
    <string name="start_button">Start Now</string>
    <string name="heading">Welcome to Udacity Quiz Challenge!</string>
    <string name="submit_button">Submit</string>
    <string name="reset_button">Reset</string>
    <string name="hint_answer">Write Your Answer Here</string>
</resources>
