<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundColor"
    android:padding="15dp">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.quizapp.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_layout"
            android:background="@color/Background_color"
            android:text="@string/heading"
            android:textAllCaps="true"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_for_heading"
            android:textStyle="bold" />

        <TextView
            style="@style/questionNumber"
            android:text="@string/title_q_1" />


        <TextView
            style="@style/questionName"
            android:text="@string/content_q_1" />

        <RadioGroup
            android:id="@+id/radiogroup1"
            style="@style/RadiogroupAnswer">

            <RadioButton
                android:id="@+id/button11"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion1"
                android:text="@string/option_q_1_1" />

            <RadioButton
                android:id="@+id/button12"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion1"
                android:text="@string/option_q_1_2" />

            <RadioButton
                android:id="@+id/button13"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion1"
                android:text="@string/option_q_1_3" />
        </RadioGroup>

        <TextView
            style="@style/questionNumber"
            android:text="@string/title_q_2" />

        <TextView
            style="@style/questionName"
            android:text="@string/content_q_2" />

        <RadioGroup
            android:id="@+id/radiogroup2"
            style="@style/RadiogroupAnswer">

            <RadioButton
                android:id="@+id/button21"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion2"
                android:text="@string/option_q_2_1" />

            <RadioButton
                android:id="@+id/button22"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion2"
                android:text="@string/option_q_2_2" />

            <RadioButton
                android:id="@+id/button23"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion2"
                android:text="@string/option_q_2_3" />
        </RadioGroup>

        <TextView
            style="@style/questionNumber"
            android:text="@string/title_q_3" />

        <TextView
            style="@style/questionName"
            android:text="@string/content_q_3" />

        <RadioGroup
            android:id="@+id/radiogroup3"
            style="@style/RadiogroupAnswer">

            <RadioButton
                android:id="@+id/button31"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion3"
                android:text="@string/option_q_3_1" />

            <RadioButton
                android:id="@+id/button32"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion3"
                android:text="@string/option_q_3_2" />

            <RadioButton
                android:id="@+id/button33"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion3"
                android:text="@string/option_q_3_3" />
        </RadioGroup>

        <TextView
            style="@style/questionNumber"
            android:text="@string/title_q_4" />

        <TextView
            style="@style/questionName"
            android:text="@string/content_q_4" />

        <EditText
            android:id="@+id/edit_text_q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_box"
            android:padding="@dimen/padding_text"
            android:hint="@string/hint_answer"
            android:textColorHint="@color/text_color"
            android:textColor="@color/text_color"
            android:inputType="textCapWords" />

        <TextView
            style="@style/questionNumber"
            android:text="@string/title_q_5" />

        <TextView
            style="@style/questionName"
            android:text="@string/content_q_5" />

        <LinearLayout style="@style/RadiogroupAnswer">

            <CheckBox
                android:id="@+id/button51"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion5"
                android:text="@string/option_q_5_1" />

            <CheckBox
                android:id="@+id/button52"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion5"
                android:text="@string/option_q_5_2" />

            <CheckBox
                android:id="@+id/button53"
                style="@style/optionalAnswer"
                android:onClick="onCheckedQuestion5"
                android:text="@string/option_q_5_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:onClick="clickSubmit"
                android:background="#0c6483"
                android:padding="15dp"
                android:text="@string/submit_button"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>