<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#120101"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/udacity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/headline"
        android:textColor="#e8f5f4"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/headline_one"
        android:textColor="#eaeded"
        android:textSize="@dimen/text_size"
        android:textStyle="italic" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#feffff"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/button"
        android:paddingBottom="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="15dp"
        android:text="@string/start_button"
        android:textSize="@dimen/text_size"/>
</LinearLayout>